# sage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: REPO_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_request.md
.github/workflows/: conformance.yml  context-budget.yml  eval-coverage.yml  evals-offline.yml  gate-tests.yml  hook-tests.yml  platform-smoke.yml  plugin-build.yml  plugin-drift.yml  reference-integrity.yml  release.yml  shell-compat.yml  version-drift.yml  workflow-lint.yml
core/: README.md  registry.yaml
core/agents/: README.md  analyst.persona.md  architect.persona.md  debugger.persona.md  developer.persona.md  (+1 more)
develop/: fastcheck.sh
docs/: README.md  authoring-skills.md  composition.md  context-budget.md  eager-diet-map.md  eval-baseline-v2.md  eval-baseline.md  handoff-2026-07-12.md  install.md  learning-lifecycle.md  multi-agent.md  parallel-sessions.md  pi-spike-verdict.md  platform-veto-investigation-2026-07-12.md  porting-sage.md
packs/: README.md
packs/sage-autoresearch/: README.md  pyproject.toml
packs/sage-autoresearch/autoresearch/: __init__.py  __main__.py  git.py  memory.py  results.py  sandbox.py  scope.py
packs/sage-autoresearch/autoresearch/tests/: test_harness.py  test_memory.py  test_results.py  test_scope.py
packs/sage-autoresearch/autoresearch/tests/fixture/: brief.md
packs/sage-autoresearch/autoresearch/tests/integration/: test_loop.py
skills/: README.md  skills.json
tools/: README.md
(+788 files in other folders)
