[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-autoresearch"
version = "1.3.2"
description = "Autonomous research loop for Sage — brief in, verified result out."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "xoai" }]
keywords = ["sage", "agent", "research"]
# Stdlib only, deliberately. A research loop that pulls a dependency tree is a
# research loop that breaks on someone else's release schedule.
dependencies = []

[project.urls]
Homepage = "https://github.com/xoai/sage-autoresearch"
Upstream = "https://github.com/xoai/sage"

[project.scripts]
autoresearch = "autoresearch.cli:main"

[tool.setuptools.packages.find]
include = ["autoresearch*"]

[tool.setuptools.package-data]
autoresearch = ["tests/fixture/**"]
